--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -15,9 +15,8 @@
 }
 
 .skills .tools ul li img {
-    max-width: 50px;
-    max-height: 50px;
-    margin: 0 .5rem;
+    max-width: 40px;
+    margin: .5rem;
 }
 
 .skills .personal ul {
@@ -32,12 +31,12 @@
 
 .skills .personal ul li {
     margin-left: 2rem;
-    padding: .5rem
+    padding: .5rem;
 }
 
 @media only screen and (min-width: 768px) {
-    .skills {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+    .skills{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     }
 }
