--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -5,32 +5,26 @@
     margin: 1rem 0;
     border: 1px solid #fff;
     border-radius: 1rem;
-    transition: .25s;
+    transition: 0.25s;
 }
 
 .acordeon.open,
 .acordeon:hover {
-    background-color: #55569E;
-    border-color: #55569E;
+    background-color: #E91E26;
+    border-color: #EEEEEE;
 }
 
 .acordeon .trigger {
+    font-size: 1.5rem;
+    font-weight: 700;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem;
-    font-weight: 700;
     padding: 1rem 2rem;
     background-color: transparent;
     color: #fff;
     border: none;
-}
-
-.acordeon .trigger h2 {
-    margin: 0;
-    font-size: 1.5rem;
-    text-align: start;
 }
 
 .acordeon .trigger:hover {
@@ -44,7 +38,7 @@
     height: 1.5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('../img/icons/arrow-top.svg');
+    background-image: url(/assets/img/icons/arrow.svg);
     transition: .25s;
 }
 
