--- a/assets/css/certificate.css
+++ b/assets/css/certificate.css
@@ -1,4 +1,4 @@
-.portfolio {
+.certificate {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -8,14 +8,14 @@
     list-style: none;
 }
 
-.portfolio li {
+.certificate li {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     margin: 1rem 0;
 }
 
-.portfolio li .title {
+.certificate li .title {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -24,13 +24,19 @@
     margin-bottom: .5rem;
 }
 
-.portfolio li .title.github::before {
-    content: '';
+.certificate li .period {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.certificate li .period::before {
+    content: "";
     display: inline-block;
     width: 1rem;
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(/assets/img/icons/github.svg);
+    background-image: url(/assets/img/icons/calendar.svg);
     margin-right: .5rem;
 }
